# graphs

./: CMakeLists.txt  main.cpp  nn.py
Functions/: ActivationDesc.h  Activations.h  Activations_.cpp  CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  Derivatives.cpp  Derivatives.h  Generator.h  Info.cpp  Info.h
Learning/: CMakeLists.txt  Learning.cpp  Learning.h
NeuralNetwork/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h
Nodes/: CMakeLists.txt  Nodes.cpp  Nodes.h
Plotter/: CMakeLists.txt  plot.h
matplotlibcpp17/hello_world/: hello_world.cpp
matplotlibcpp17/plotter/: CMakeLists.txt  plot.cpp  plot.h
